--- a/html/earth.html
+++ b/html/earth.html
@@ -7,16 +7,11 @@
     <title>Earth Info</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">Hello world</a></li>
-          <li><a href="#">Hello world</a></li>
-          <li><a href="#">Hello world</a></li>
-          <li><a href="#">Hello world</a></li>
-          <li><a href="#">Hello world</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="upper">
+      <span class="upperHeading">Contact Us</span>
+      <div class="upperContent">
+        <span class="upperContentText">Phone: +91 1234567890</span>
+        <span class="upperContentText">Email: 2a5t4@example.com</span>
+    </div>
   </body>
 </html>
