--- a/html/earth.html
+++ b/html/earth.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>It's earth</title>
-    <link rel="stylesheet" href="../css/earth.css" />
+    <link rel="stylesheet" href="../css/planetsCss/earth.css" />
   </head>
   <body class="forBg">
     <header>
@@ -31,14 +31,12 @@
         </nav>
       </div>
     </header>
+
     <!-- !earth -->
     <main id="earth" class="main-container">
       <section class="destination-section">
         <h2>OUR PLANET</h2>
         <div class="planet-info">
-          <div class="planet-image">
-            <img src="../assets/image/pngPlanet/earthpn.png" alt="earth" />
-          </div>
           <div class="planet-details">
             <div class="planet-tabs">
               <a href="#earth" class="active">EARTH</a>
@@ -48,9 +46,12 @@
             </div>
             <h1>EARTH</h1>
             <p>
-              Don’t forget to pack your hiking boots. You’ll need them to tackle
-              Olympus Mons, the tallest planetary mountain in our solar system.
-              It’s two and a half times the size of Everest!
+              Our home planet is the third planet from the Sun and is the
+              largest of the terrestrial planets. It is also the fifth largest
+              planet in the solar system. With a surface of 510 million km2, it
+              is perfect for a quick trip around the world. Just be prepared to
+              pack your hiking boots. You’ll need them to tackle some of the
+              most rugged terrain on the planet.
             </p>
             <div class="planet-stats">
               <div>
@@ -62,6 +63,9 @@
                 <h3>12 MONTHS</h3>
               </div>
             </div>
+          </div>
+          <div id="earth-image" class="planet-image">
+            <img src="../assets/image/pngPlanet/earthpn.png" alt="earth" />
           </div>
         </div>
       </section>
@@ -82,9 +86,15 @@
             </div>
             <h1>MOON</h1>
             <p>
-              Get ready to experience the serene beauty of the Moon. Explore its
-              craters and learn about its fascinating history. It's a journey
-              like no other!
+              The Moon is Earth's only natural satellite and the fifth-largest
+              moon in the solar system. It is a rocky, airless body with a
+              cratered surface, and it is in a synchronous rotation with Earth,
+              which means it always shows the same face to our planet. The
+              Moon's surface is composed of a variety of rock types, including
+              basalts, anorthosites, and breccias. Its gravity is about
+              one-sixth of Earth's, and it has no atmosphere. The Moon is a
+              fascinating object of study in the fields of astronomy, geology,
+              and space exploration.
             </p>
             <div class="planet-stats">
               <div>
@@ -97,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="planet-image">
+          <div id="moon-image" class="planet-image">
             <img src="../assets/image/pngPlanet/moon.png" alt="moon" />
           </div>
         </div>
@@ -134,18 +144,15 @@
               </div>
             </div>
           </div>
-          <div class="planet-image">
+          <div id="satellite-image" class="planet-image">
             <img src="../assets/image/satellite/voyager.png" alt="voyager1" />
           </div>
         </div>
+        <span class="explore-btn">
+          <a href="../PlanetDoc/html/earthDoc.html">EXPLORE MORE</a>
+        </span>
       </section>
     </main>
-    <script>
-      document
-        .getElementById("menuToggle")
-        .addEventListener("click", function () {
-          document.getElementById("navMenu").classList.toggle("open");
-        });
-    </script>
+    <script src="../JS/planetMenu.js"></script>
   </body>
 </html>
