--- a/html/earth.html
+++ b/html/earth.html
@@ -149,7 +149,7 @@
           </div>
         </div>
         <span class="explore-btn">
-          <a href="../PlanetDoc/html/earthDoc.html">EXPLORE MORE</a>
+          <a href="../html/starmap.html">BACKTO MAP</a>
         </span>
       </section>
     </main>
