--- a/PlanetDoc/html/earthDoc.html
+++ b/PlanetDoc/html/earthDoc.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/earthDoc.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    coming soon
+    <header>
+      <div class="nav-container">
+        <div class="logo"></div>
+        <div class="hamburger-menu" id="menuToggle">&#9776;</div>
+        <nav id="navMenu">
+          <ul>
+            <li>
+              <a href="#earth"><span>00</span> EARTH</a>
+            </li>
+            <li>
+              <a href="#moon"><span>01</span> MOON</a>
+            </li>
+            <li>
+              <a href="#satellite"><span>02</span> SATELLITE</a>
+            </li>
+            <li>
+              <a href="../PlanetDoc/html/earthDoc.html"
+                ><span>04</span> DOCUMENT</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <script src="../JS/menu.js"></script>
   </body>
 </html>
