--- a/PlanetDoc/html/earthDoc.html
+++ b/PlanetDoc/html/earthDoc.html
@@ -31,6 +31,17 @@
         </nav>
       </div>
     </header>
+
+    <main class="box">
+      <h1>Earth</h1>
+      <p class="text1">
+        Earth is the third planet from the Sun and is the largest planet in the
+        solar system. It is the only planet known in continuous existence from
+        the surface of the Sun. It is named after the titan, god of the sky, and
+        is often referred to as the Earth due to its proximity to the Sun.
+      </p>
+    </main>
+
     <script src="../JS/menu.js"></script>
   </body>
 </html>
