--- a/PlanetDoc/html/earthDoc.html
+++ b/PlanetDoc/html/earthDoc.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- hello world -->
+    <!-- hello  -->
     <header>
       <div class="nav-container">
         <div class="logo"></div>
