--- a/html/Disaster.html
+++ b/html/Disaster.html
@@ -45,7 +45,7 @@
             </div>
         </footer>
     </main>
-    <script src="../JS/data.js"></script>
+    <script src="../JS/weather.js"></script>
 </body>
 
 </html>
