--- a/html/earthQuark.html
+++ b/html/earthQuark.html
@@ -10,7 +10,7 @@
     <div class="resultbox">
       <div id="disasterAll"></div>
     </div>
-
+    <div class="resultbox"></div>
     <script src="../JS/app.js"></script>
     <script src="../JS/data.js"></script>
   </body>
