--- a/html/index.html
+++ b/html/index.html
@@ -173,5 +173,5 @@
   <script src="../JS/app.js"></script>
   <script src="../JS/data.js"></script>
 </body>
-
+<!-- this is a fucking comment -->
 </html>
